--- a/crates/hell_winit/Cargo.toml
+++ b/crates/hell_winit/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "0.26.1"
+winit = "0.27.1"
+
+
+hell_renderer = { path = "../hell_renderer" }
+
