--- a/crates/hell_common/Cargo.toml
+++ b/crates/hell_common/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "dummy_bin"
+name = "hell_common"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_app = { path = "../hell_app" }
-hell_winit = { path = "../hell_winit" }
