--- a/crates/hell_winit/Cargo.toml
+++ b/crates/hell_winit/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2021"
 winit = "0.27.1"
 
 
+hell_common = { path = "../hell_common" }
+hell_app = { path = "../hell_app" }
 hell_renderer = { path = "../hell_renderer" }
 
