--- a/crates/hell_renderer/Cargo.toml
+++ b/crates/hell_renderer/Cargo.toml
@@ -13,3 +13,4 @@ num = "0.4.0"
 ash = "0.37.0+1.3.209"
 glam = { version = "0.21.2", features = ["debug-glam-assert"] }
 memoffset = "0.6.5"
+image  = "0.24.3"
