--- a/crates/hell_renderer/Cargo.toml
+++ b/crates/hell_renderer/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 
 [dependencies]
 hell_common = { path = "../hell_common" }
+hell_math = { path = "../hell_math" }
 hell_utils = { path = "../hell_utils" }
 
 num = "0.4.0"
+glam = "0.21.3"
 ash = "0.37.0+1.3.209"
-glam = { version = "0.21.2", features = ["debug-glam-assert"] }
 memoffset = "0.6.5"
 image  = "0.24.3"
