--- a/crates/hell_renderer/Cargo.toml
+++ b/crates/hell_renderer/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_common = { path = "../hell_common" }
-hell_utils = { path = "../hell_utils" }
+hell_common    = { path = "../hell_common" }
+hell_utils     = { path = "../hell_utils" }
+hell_resources = { path = "../hell_resources" }
 
 num = "0.4.0"
 glam = "0.21.3"
