--- a/crates/hell_renderer/Cargo.toml
+++ b/crates/hell_renderer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 hell_common    = { path = "../hell_common" }
+hell_error     = { path = "../hell_error" }
 hell_utils     = { path = "../hell_utils" }
 hell_resources = { path = "../hell_resources" }
 
