--- a/crates/hell_error/Cargo.toml
+++ b/crates/hell_error/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "hell_common"
+name = "hell_error"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_error = { path = "../hell_error" }
-
-glam = "0.21.3"
