--- a/crates/hell_input/Cargo.toml
+++ b/crates/hell_input/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 hell_common = { path = "../hell_common" }
+hell_error  = { path = "../hell_error" }
 
 winit = "0.27.3"
 bitflags = "1.3.2"
