--- a/crates/hell_app/Cargo.toml
+++ b/crates/hell_app/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_common    = { path = "../hell_common" }
 hell_error     = { path = "../hell_error" }
+hell_common    = { path = "../hell_common" }
+hell_input     = { path = "../hell_input" }
 hell_renderer  = { path = "../hell_renderer" }
 hell_resources = { path = "../hell_resources" }
