--- a/crates/hell_winit/Cargo.toml
+++ b/crates/hell_winit/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "hell_window"
+name = "hell_winit"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "0.27.1"
-
-
-hell_common = { path = "../hell_common" }
 hell_error  = { path = "../hell_error" }
-hell_app = { path = "../hell_app" }
-hell_renderer = { path = "../hell_renderer" }
+hell_common = { path = "../hell_common" }
+hell_input  = { path = "../hell_input" }
+hell_app    = { path = "../hell_app" }
+
+winit = "0.27.1"
 
