--- a/crates/hell_renderer/Cargo.toml
+++ b/crates/hell_renderer/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hell_core      = { path = "../hell_core" }
 hell_common    = { path = "../hell_common" }
 hell_error     = { path = "../hell_error" }
 hell_utils     = { path = "../hell_utils" }
