--- a/crates/hell_resources/Cargo.toml
+++ b/crates/hell_resources/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_error  = { path = "../hell_error" }
+hell_core  = { path = "../hell_core" }
+hell_error = { path = "../hell_error" }
 
 image = "0.24.4"
 serde = { version = "1.0.145", features = ["derive"] }
