--- a/engine/crates/hell_input/Cargo.toml
+++ b/engine/crates/hell_input/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_error  = { path = "../hell_error" }
+hell_error  = { path = "../../../hust/crates/hell_error" }
 
 bitflags = "1.3.2"
 strum = { version = "0.24.1", features = ["derive"] }
