--- a/engine/crates/hell_renderer/Cargo.toml
+++ b/engine/crates/hell_renderer/Cargo.toml
@@ -1,14 +1,20 @@
 [package]
-name = "hell_app"
+name = "hell_renderer"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_error     = { path = "../hell_error" }
 hell_core      = { path = "../hell_core" }
 hell_common    = { path = "../hell_common" }
-hell_input     = { path = "../hell_input" }
-hell_renderer  = { path = "../hell_renderer" }
+hell_error     = { path = "../../../hust/crates/hell_error" }
+hell_utils     = { path = "../hell_utils" }
 hell_resources = { path = "../hell_resources" }
+
+num = "0.4.0"
+glam = "0.21.3"
+ash = "0.37.0+1.3.209"
+memoffset = "0.6.5"
+image  = "0.24.3"
+lazy_static = "1.4"
