feat (physics): add aabb; update cargo tomls

--- a/engine/crates/hell_common/Cargo.toml
+++ b/engine/crates/hell_common/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 hell_error  = { path = "../../../hust/crates/hell_error" }
 
-glam = "0.21.3"
+glam.workspace = true
