--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -2,3 +2,21 @@
 members = [
     "crates/*"
 ]
+
+[workspace.dependencies]
+num = "0.4.0"
+num-traits = "0.2"
+num-derive= "0.3"
+
+glam = "0.22.0"
+bitflags = "1.3.2"
+strum = { version = "0.24.1", features = ["derive"] }
+memoffset = "0.6.5"
+lazy_static = "1.4"
+
+serde = { version = "1.0.145", features = ["derive"] }
+serde_yaml = "0.9.13"
+
+image  = "0.24.3"
+winit = "0.27.1"
+ash = "0.37.0+1.3.209"
