--- a/engine/crates/hell_input/Cargo.toml
+++ b/engine/crates/hell_input/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 hell_error  = { path = "../../../hust/crates/hell_error" }
 
-bitflags = "1.3.2"
-strum = { version = "0.24.1", features = ["derive"] }
-num-traits = "0.2"
-num-derive= "0.3"
+bitflags.workspace = true
+strum.workspace = true
+num-traits.workspace = true
+num-derive.workspace = true
