--- a/engine/crates/hell_physics/Cargo.toml
+++ b/engine/crates/hell_physics/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 hell_error  = { path = "../../../hust/crates/hell_error" }
 hell_common = { path = "../hell_common" }
+
+glam.workspace = true
