--- a/engine/crates/hell_renderer/Cargo.toml
+++ b/engine/crates/hell_renderer/Cargo.toml
@@ -12,9 +12,9 @@ hell_error     = { path = "../../../hust/crates/hell_error" }
 hell_utils     = { path = "../hell_utils" }
 hell_resources = { path = "../hell_resources" }
 
-num = "0.4.0"
-glam = "0.21.3"
-ash = "0.37.0+1.3.209"
-memoffset = "0.6.5"
-image  = "0.24.3"
-lazy_static = "1.4"
+num.workspace = true
+glam.workspace = true
+ash.workspace = true
+memoffset.workspace = true
+image .workspace = true
+lazy_static.workspace = true
