feat (gui): add basic text_mesh

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -3,6 +3,10 @@ members = [
     "crates/*"
 ]
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+
 [workspace.dependencies]
 num = "0.4.0"
 num-traits = "0.2"
