--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
+authors = [ "helloki <helloki@mailbox.org>" ]
 
 [workspace.dependencies]
 hell_error       = { path = "../hust/crates/hell_error" }
