--- a/engine/crates/hell_renderer/Cargo.toml
+++ b/engine/crates/hell_renderer/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
 name = "hell_renderer"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
 
 [dependencies]
 hell_error.workspace = true
@@ -21,3 +20,5 @@ memoffset.workspace = true
 image .workspace = true
 lazy_static.workspace = true
 bitflags.workspace = true
+serde.workspace = true
+serde_yaml.workspace = true
