--- a/engine/lib/hell_common/Cargo.toml
+++ b/engine/lib/hell_common/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "hell_common"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hell_error  = { path = "../../../hust/crates/hell_error" }
+hell_error.workspace = true
 
 glam.workspace = true
