--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -34,6 +34,7 @@ lazy_static = "1.4"
 
 serde = { version = "1.0.145", features = ["derive"] }
 serde_yaml = "0.9.13"
+serde_json = "1.0.9"
 
 image  = "0.24.3"
 winit = "0.27.1"
