--- a/engine/bin/shader_crap/Cargo.toml
+++ b/engine/bin/shader_crap/Cargo.toml
@@ -10,6 +10,10 @@ hell_collections.workspace = true
 
 glam.workspace = true
 
+serde.workspace = true
+serde_json.workspace = true
+serde_yaml.workspace = true
+
 num.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
