--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -39,3 +39,6 @@ serde_json = "1.0.9"
 image  = "0.24.3"
 winit = "0.27.1"
 ash = "0.37.0+1.3.209"
+pest = "2.5.3"
+pest_derive = "2.5.3"
+clap = "4.1.4"
