--- a/engine/bin/shader_crap/Cargo.toml
+++ b/engine/bin/shader_crap/Cargo.toml
@@ -7,6 +7,7 @@ authors.workspace = true
 [dependencies]
 hell_error.workspace = true
 hell_collections.workspace = true
+hell_renderer.workspace = true
 
 glam.workspace = true
 
@@ -18,5 +19,6 @@ num.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
 
-pest = "2.5.3"
-pest_derive = "2.5.3"
+pest.workspace = true
+pest_derive.workspace = true
+clap.workspace = true
