--- a/engine/lib/hell_winit/Cargo.toml
+++ b/engine/lib/hell_winit/Cargo.toml
@@ -5,7 +5,8 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
-hell_error.workspace = true
+hell_core.workspace = true
+
 hell_common.workspace = true
 hell_input.workspace = true
 hell_app.workspace = true
