--- a/engine/lib/hell_common/Cargo.toml
+++ b/engine/lib/hell_common/Cargo.toml
@@ -4,9 +4,7 @@ version.workspace = true
 edition.workspace = true
 authors.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-hell_error.workspace = true
+hell_core.workspace = true
 
 glam.workspace = true
